# CHIP8-Emulator

./: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Chip8.cpp  Chip8.h  Constants.h  Controller.cpp  Controller.h  Drawer.cpp  Drawer.h  KeyLogger.cpp  KeyLogger.h  Observer.h  README.md  Subject.h  Typedefs.h  main.cpp
CMake/: FindSDL2.cmake
